--- a/package.json
+++ b/package.json
@@ -15,8 +15,12 @@
     "format": "prettier --write ."
   },
   "dependencies": {
+    "@chakra-ui/react": "^2.8.0",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
     "electron-is-dev": "^1.1.0",
     "electron-next": "^3.1.5",
+    "framer-motion": "^10.15.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-markdown": "^8.0.7"
